# BigDL-core

./: .gitignore  .gitmodules  Makefile.common  README.md  pom.xml
.github/workflows/: scorecard.yml
bigdl-core-math/: pom.xml
bigdl-core-math/bigdl-core-math-mac/: pom.xml
bigdl-core-math/bigdl-core-math-rh5/: pom.xml
bigdl-core-math/bigdl-core-math-win64/: Makefile  pom.xml
bigdl-core-math/bigdl-core-math-x86_64-linux/: pom.xml
bigquant/: Makefile.common  pom.xml
bigquant/bigquant-java-mac/: Makefile  pom.xml
bigquant/bigquant-java-rh5/: Makefile  pom.xml
bigquant/bigquant-java-win64/: Makefile  pom.xml
bigquant/bigquant-java-x86_64-linux/: Makefile  pom.xml
bigquant/jni/: pom.xml
bigquant/native/: .clang-format  Makefile  Makefile.base  alloc.h  base.h  bigquant.h  c_api.cc  c_api_rt.cc  common.h  internal_api.h  model.h  tensor.h
bigquant/quant/: pom.xml
bigquant/quant-win64/: pom.xml
ckks/: pom.xml
ckks/ckks-java-x86_64-linux/: CMakeLists.txt  pom.xml
ckks/ckks-java-x86_64-linux/cmake/: seal.cmake
dnnl/: Makefile.common  pom.xml
dnnl/dnnl-java-x86_64-linux/: pom.xml
fixpoint/: pom.xml
fixpoint/fixpoint/: pom.xml
fixpoint/jni/: pom.xml
mkl-dnn/: Makefile.common  pom.xml
mkl-dnn/dnn-java-x86_64-linux/: Makefile
mkl-dnn/mkl-dnn-java-x86_64-linux/: pom.xml
mkl2017-xeon-blas/: Makefile.common  pom.xml
mkl2017-xeon-dnn/: pom.xml
native-dnn/: Makefile.common  pom.xml
opencv/: README.md  pom.xml
ppml/: Makefile.common  README.md  pom.xml
ppml-tdx/: README.md  pom.xml
python/src/: setup.py
quantization/: pom.xml
(+319 files in other folders)
